--- a/crypfolio/web/resources/css/default.css
+++ b/crypfolio/web/resources/css/default.css
@@ -7,6 +7,7 @@ html {
   color: #000000;
   margin: 0 auto;
   min-width: 800px;
+  max-width: 1300px;
   width: 100%;
 }
 
@@ -407,6 +408,10 @@ body .ui-buttonset .ui-button {
   border-radius: 3px 0 0 3px;
 }
 
+.form-control.form-control-center .ui-inputfield {
+  border-radius: 3px;
+}
+
 .ui-inputtextarea.form-control {
   resize: none !important;
   height: auto !important;
@@ -487,4 +492,3 @@ body .ui-buttonset .ui-button {
 #mainTabView\:formPortfolioAddItem-transaction\:add-transaction-type div:not(.ui-state-active) {
   opacity: 0.3;
 }
-
