preliminary add-item list of user's already owned items

--- a/crypfolio/web/resources/css/default.css
+++ b/crypfolio/web/resources/css/default.css
@@ -369,6 +369,9 @@ body .ui-buttonset .ui-button {
     padding: 1em;
 }
 
+.noHeader.ui-datatable table thead tr {
+    display: none;
+}
 /*.ui-button-text-only .ui-button-text{*/
 /*padding: 0 !important;*/
 /*}*/
