was enabled sortBy rule "by default" to datatables

--- a/crypfolio/web/resources/css/default.css
+++ b/crypfolio/web/resources/css/default.css
@@ -177,7 +177,7 @@ td.flex {
 }
 
 .flex-space-between {
-    display: flex;
+    display: flex !important;
     justify-content: space-between;
 }
 
