--- a/crypfolio-jsf-mariadb/web/WEB-INF/templates/common-header.xhtml
+++ b/crypfolio-jsf-mariadb/web/WEB-INF/templates/common-header.xhtml
@@ -7,7 +7,7 @@
 
         <h:link outcome="/faces/login.xhtml">
 
-            <h:graphicImage name="images/logo_big_mariadb.png" alt="Crypfolio :: a new crypto portfolio" width="384" height="85"/>
+            <h:graphicImage name="images/logo_big_jsf_mariadb.png" alt="Crypfolio :: a new crypto portfolio" width="384" height="85"/>
 
         </h:link>
 
